--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^2.0.1",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mariadb": "^2.1.4",
+    "sequelize": "^5.21.2"
   }
 }
